--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^10.2.4",
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.13",
+        "postcss-import": "^14.0.1",
+        "postcss-nested": "^5.0.5",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.8",
-        "sass-loader": "^10.1.1",
-        "tailwindcss": "^2.0.3"
+        "tailwindcss": "^2.1.2"
     }
 }
